--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,10 @@ dependencies:
   animations: ^2.0.11
   flutter_custom_clippers: ^2.1.0
   animated_snack_bar: ^0.4.0
-  
- 
+  provider: ^6.1.2
+  intl: ^0.19.0
+  image_picker: 
+  firebase_core: ^2.27.0
 
 dev_dependencies:
   flutter_test:
