--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   firebase_auth: ^4.17.8
   cloud_firestore: ^4.15.8
   shared_preferences: ^2.2.3
+  url_launcher: ^6.3.0
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
